--- a/supplier-product-consumer-service/src/main/resources/config/application-qa.yml
+++ b/supplier-product-consumer-service/src/main/resources/config/application-qa.yml
@@ -978,6 +978,7 @@ spring:
               register: false
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
+       time-zone: GMT+8       
   mail: 
        default-recipient: yan_xiao_bin@126.com
        default-sender: yanxiaobin@shangpin.com
