--- a/ephub-fdfs-client-service/src/main/resources/config/application-dev.yml
+++ b/ephub-fdfs-client-service/src/main/resources/config/application-dev.yml
@@ -14,6 +14,7 @@ spring:
               register-health-check: true 
   jackson: 
        date-format: yyyy-MM-dd HH:mm:ss
+       time-zone: GMT+8       
   mail: 
        default-recipient: yan_xiao_bin@126.com
        default-sender: yanxiaobin@shangpin.com
