search spskuno before send data to scm

--- a/ephub-product-business-service/src/main/resources/config/application-dev.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-dev.yml
@@ -65,3 +65,4 @@ shangpin:
              gmsBrandUrl: http://qa.scmapi.shangpin.com/gms/ProductBasicData/GetBrands
              gmsCategoryUrl: http://qa.scmapi.shangpin.com/gms/ProductBasicData/GetCategory
              scmsSupplierInfoUrl: http://qa.scm.shangpin.com/scms/Supplier/GetSupplierInfoListByNo?supplierNo=
+             sopSkuListBySupplierSkuNoUrl: http://qa.sopoutapi.shangpin.com/Product/GetSopSkuListBySupplierSkuNo
