--- a/ephub-product-business-service/src/main/resources/config/application-pre.yml
+++ b/ephub-product-business-service/src/main/resources/config/application-pre.yml
@@ -70,3 +70,4 @@ shangpin:
              gmsSizeUrl: http://scmapi.spidc1.com/gms/ProductBasicData/GetProductSize
              gmsBrandUrl: http://scmapi.spidc1.com/gms/ProductBasicData/GetBrands
              gmsCategoryUrl: http://scmapi.spidc1.com/gms/ProductBasicData/GetCategory
+             sopSkuListBySupplierSkuNoUrl: http://qa.sopoutapi.shangpin.com/Product/GetSopSkuListBySupplierSkuNo
