--- a/settings.gradle
+++ b/settings.gradle
@@ -17,24 +17,7 @@ include 'iog-sop'
 include 'iog-generater-util'
 include 'iog-web-apiHandler'
 
-include 'coltorti'
-include 'atelier-ostore-order'
-
-
-
-
-include 'report'
-include 'picturedown'
-
-
-include 'project-mq'
-include 'stockMontiHK'
-include 'stockclean'
-include 'OpenTest'
-
-include 'monnierfreres'
-include 'giglio'
-include 'dellogliostore'
-
-
+include 'eleonorabonucci'
+include 'biondini'
+include 'syn-spsku-hub'
 
