--- a/picture-product-consumer-service/src/main/resources/config/application-dev.yml
+++ b/picture-product-consumer-service/src/main/resources/config/application-dev.yml
@@ -1,4 +1,4 @@
-feign.hystrix.enabled: true
+feign.hystrix.enabled: false
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 120000
 ribbon:
   ConnectTimeout: 120000
